# subsnap

./: .gitignore  Cargo.toml  README.md  build.rs  icon.rgba
.github/workflows/: release.yml
src/: audio.rs  check_subparse.rs  config.rs  correlation.rs  main.rs  regression.rs  srt.rs  sync.rs  ui.rs  vad.rs
subsnap-web/: Cargo.toml  README.md  Trunk.toml  build.rs  index.html  orginal.srt  perfect.srt
subsnap-web/src/: audio.rs  config.rs  correlation.rs  lib.rs  main.rs  srt.rs  sync.rs  ui.rs  vad.rs
