[package]
name = "subsnap"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "subsnap"
path = "src/main.rs"

[dependencies]
alass-core = "2.0.0"
eframe = { version = "0.33.3", features = ["persistence", "serde"] }
# Rayon doesn't work out-of-the-box in standard WASM
rayon = { version = "1.11.0", optional = true }
rustfft = "6.1"
num-complex = "0.4"
rfd = "0.17.2"
pollster = "0.3"
subparse = "0.7"
symphonia = { version = "0.5.5", features = ["all"] }


futures-util = { version = "0.3", features = ["sink"] }
futures-channel = { version = "0.3", features = ["sink"] }
earshot = "1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Blob", "Url", "HtmlAnchorElement", "Window", "Document", "Element"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
# we'll use a single-threaded approach for now to avoid the complexity of shared memory wasm

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
ico = "0.3"


[profile.dev]
opt-level = 3  # Maximize VAD performance on standard 'trunk serve' build without triggering wasm-opt

# Optimize for size
[profile.release]
opt-level = 2  # Optimize for speed but avoid level 3 loop-vectorization bulk-memory opcodes that crash wasm-opt
lto = true       # Enable Link Time Optimization
codegen-units = 1 # Maximize size reduction
panic = "abort"   # Remove panic unwinding overhead
strip = true      # Strip symbols

